--- a/AgileProjectManager/AgileProjectManager/AgileProjectManager.csproj
+++ b/AgileProjectManager/AgileProjectManager/AgileProjectManager.csproj
@@ -47,25 +47,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmMaterialTemplate.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmMaterialTemplate.Designer.cs">
+      <DependentUpon>frmMaterialTemplate.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmTemplate.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmTemplate.Designer.cs">
       <DependentUpon>frmTemplate.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmMaterialTestTemplate.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frmMaterialTestTemplate.Designer.cs">
-      <DependentUpon>frmMaterialTestTemplate.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmMaterialTemplate.resx">
+      <DependentUpon>frmMaterialTemplate.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmTemplate.resx">
       <DependentUpon>frmTemplate.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frmMaterialTestTemplate.resx">
-      <DependentUpon>frmMaterialTestTemplate.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
